# flappy-bird

./: CMakeLists.txt
src/: Camera.cpp  EBO.cpp  VAO.cpp  VBO.cpp  file_test.cpp  glad.c  hello.txt  main.cpp  shadderClass.cpp  shaderClass.cpp  stb.cpp  texture.cpp  texture_rock.avif
src/Header_Files/: Camera.h  EBO.h  VAO.h  VBO.h  glad.h  shaderClass.h  texture.h
src/resource_files/shaders/: dafault.frag  default.ver  default.vert
